--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-        "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Nicolas Baranowski",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
@@ -26,6 +26,15 @@
     "validator": "^10.5.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "autoprefixer": "^9.3.0",
+    "css-loader": "^1.0.0",
+    "node-sass": "^4.9.4",
+    "nodemon": "^1.18.3",
+    "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2"
   }
 }
