--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "sass:build": "sass - update src/styles/scss:src/styles/css",
     "start": "react-scripts start",
-    "build": "yarn sass:build && react-scripts build",
+    "build": "npm run sass:build && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "sass" : "sass --watch src/styles/scss:src/styles/css"
