--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   "author": "Nicolas Baranowski",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "popper.js": "^1.14.3",
+    "sass": "^1.14.3",
     "validator": "^10.5.0"
   },
   "devDependencies": {
