--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/nibaranowski/dev-connector-2"
   }
 }
