--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,13 @@
     "sass": "^1.14.3"
   },
   "scripts": {
-    "sass:build": "sass - update src/styles/scss:src/styles/css",
+    "sass": "sass --watch src/styles/scss:src/styles/css",
+    "sass:build": "sass — update src/styles/scss:src/styles/css",
+    "sass-production": "sass --update src/styles/scss:src/styles/css",
     "start": "react-scripts start",
-    "build": "npm run sass:build && react-scripts build",
+    "build": "npm run sass-production && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "sass": "sass --watch src/styles/scss:src/styles/css"
+    "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000"
 }
