--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "sass": "sass --watch src/styles/scss:src/styles/css",
     "sass:build": "sass — update src/styles/scss:src/styles/css",
     "sass-production": "sass --update src/styles/scss:src/styles/css",
-    "start": "react-scripts start",
+    "start": "npm run sass-production && react-scripts start",
     "build": "npm run sass-production && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
